# spoonfed

./: .gitignore  CLAUDE.md  README.md  UI_QUICK_START.md  UI_REVAMP_SUMMARY.md  anki_connect_functions.py  data_cleaning_functions.py  delete.py  google_api_functions.py  gui-old.py  gui.py  gui2.py  main.py  narakeet_functions.py  openai_api_functions.py  openai_functions.py  plan.md  pyproject.toml  run_ui_test.py  sqlite_functions.py  style-guide.md  test-payload.txt  test-query.r
.claude/: hooks.json
app/: anki_connect_functions.py  audio_generating_functions.py  decks_homepage.py  generating_frame.py  generating_functions.py  iplusone.py  language_config.py  main.py  previous_cards_audio_frame.py  text_generating_functions.py  user_config.py
cards/examples/: bach-well-tempered.yaml  bagging-vs-boosting.yaml  blocking-rct.yaml  eigenvectors-normal-operator.yaml  label-swapping-mixture-models.yaml  mn2-formal-name.yaml  qr-factorization-solve.yaml  regular-vs-irregular-temperament.yaml  sixteen-defilements.yaml  statcan-csds.yaml  unitary-matrix-definition.yaml
cards/pending/: 2026-03-15-plato-music-innovation.yaml
prompts/: system.yaml
prompts/iplusone/: base.yaml  hindi.yaml  turkish.yaml
prompts/verb_exploder/: base.yaml  hindi.yaml  turkish.yaml
src/: debug_ui.py  decks_homepage.py  generating_frame.py  iplusone.py  language_config.py  main.py  main_updated.py  previous_cards_audio_frame.py  simple_ui_test.py  test_simple_ui.py  test_ui_revamp.py  user_config.py  verb_exploder_frame.py
tests/: test_cli.py  test_exporter.py  test_lint.py
(+43 files in other folders)
